Choose SMS Half, just before Regex

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="dummyperiod">7월 1일 ~ 30일</string>
 
     <string name="dummydate">12/06/2015</string>
-    <string name="dummytext">Wow, Cool, How are you! I am very pleased to meet you!</string>
+    <string name="dummytext">Wow, Cool, How are you! I am very pleased to meet you! How
+        come can you be so awesome? It's a great honor to know you!</string>
     <string name="dummyname">Jack Lee Corporation of Korea</string>
 
 
