--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,7 @@
     <string name="dummyperiod">7월 1일 ~ 30일</string>
 
     <string name="dummydate">12/06/2015</string>
-    <string name="dummytext">Wow, Cool, How are you! I am very pleased to meet you! How
-        come can you be so awesome? It's a great honor to know you!</string>
+    <string name="dummytext">Wow, Cool</string>
     <string name="dummyname">Jack Lee Corporation of Korea</string>
 
 
@@ -310,6 +309,18 @@
 
 
     <string name="search">검색</string>
+
+
+    <string-array
+        name="sms_remove_string">
+        <item>[Web발신]</item>
+    </string-array>
+
+    <string-array
+        name="sms_remove_regex">
+        <item>   </item>
+    </string-array>
+
 
     <!--
     For a list of all scopes, see:
