--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="google_learnmore">Learn more</string>
 
 
+
     Takes the user to the next step of a multi-step process
     <string name="google_next">Next</string>
 
@@ -79,12 +80,9 @@
     <!--Button-->
     <string name="change">변경</string>
     <string name="changeperiod">기간 변경</string>
-
     <string name="money_sum">총액</string>
     <string name="money_individual">각자</string>
-
-
-
+    <string name="money_ammount_neatural">금액</string>
 
     <!--Notification-->
     <string name="sent">sent</string>
@@ -241,6 +239,11 @@
 
     <!--Korean-->
 
+
+    <string name="delete_all">모두 삭제</string>
+
+
+
     <string name="app_slogan">OK보다 OQ</string>
     <string name="app_slogan_long">OQ는 우정입니다</string>
 
@@ -250,6 +253,12 @@
     <string name="why_need_sms_permission">OQ가 신용카드 사용내역 SMS로부터 당신의 지출 금액을
         자동으로 입력할 수 있도록 SMS 읽기를 허용하여 주세요.</string>
     <string name="sms_read_permission_denied">SMS 읽기가 거부되었습니다.</string>
+    <string name="currency_code">KRW</string>
+
+
+    <string name="learn_more">더 알아보기</string>
+    <string name="begin_sync_contact">연락처가 없습니다</string>
+    <string name="begin_sync_contact_long">메뉴에서 나의 전화번호부, 이메일 연락처에 저장된 회원 목록을 업데이트할 수 있습니다.\n소셜 아이디로 로그인한 경우에는 친구목록상의 친구를 검색할 수도 있습니다.</string>
 
     <string name="no_contacts">연락처가 없습니다</string>
 
@@ -392,6 +401,7 @@
     <string name="tab_to_add_sumtype">탭하여 금액 및 유형 추가</string>
 
     <string name="tab_to_add_photo">탭하여 사진 추가</string>
+    <string name="sumandtype">금액 및 유형</string>
 
     tabtoaddfriends
 
@@ -446,6 +456,12 @@
         <!-- Request permission to know the user's birthday -->
         <item>user_birthday</item>
     </string-array>
+
+    <string name="begin_chat_long">다른 회원님들과 채팅을 시작할 수 있습니다.\n채팅 내용은 서버에 저장되지 않습니다.</string>
+    <string name="begin_chat">채팅을 시작하세요</string>
+    <string name="begin_transaction_long">친구들과의 내역을 관리할 수 있습니다.\n회비 또는 계 모임을 관리할 수 있습니다.</string>    <string name="begin_transaction">금액 요청을 보내세요</string>
+    <string name="begin_feed_long">금액 요청 내역을 볼 수 있습니다.\n그룹별 게시물도 볼 수 있습니다.</string>
+    <string name="begin_feed">요청 내역 및 게시물</string>
 
 
 </resources>
